Custom urls removed

--- a/Components/Hero/HeroeComponent.razor
+++ b/Components/Hero/HeroeComponent.razor
@@ -16,7 +16,7 @@
 @code {
     private async Task GoToAdmission()
     {
-        NavigationManager.NavigateTo("/akiss/admission");
+        NavigationManager.NavigateTo("/admission");
         await Task.Delay(100);
         await JSRuntime.InvokeVoidAsync("BlazorScrollToId", "admission-form");
     }
