--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,4 @@
 @page "/"
-@page "/akiss/"
 @inject IStringLocalizer<Resources.HeroeComponent> localizer
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
@@ -22,7 +21,7 @@
 @code {
     private async Task GoToAdmission()
     {
-        NavigationManager.NavigateTo("/akiss/admission");
+        NavigationManager.NavigateTo("/admission");
         await Task.Delay(100);
         await JSRuntime.InvokeVoidAsync("BlazorScrollToId", "admission-form");
     }
