--- a/Components/Navbar/NavbarComponent.razor
+++ b/Components/Navbar/NavbarComponent.razor
@@ -15,10 +15,10 @@
   <div class="container d-flex align-items-center justify-content-between">
     @* <h1 class="logo"><a href="index.html">Al-Khorazmiy ISS<span>.</span></a></h1> *@
     <!-- Uncomment below if you prefer to use an image logo -->
-    <a href="/akiss/" class="logo"><img src="logo.png" alt=""></a>
+    <a href="/" class="logo"><img src="logo.png" alt=""></a>
     <nav id="navbar" class="navbar" onclick="ActiveStatus()">
       <ul>
-        <li><a class="nav-link scrollto active" href="/akiss/">@localizer["home"]</a></li>
+        <li><a class="nav-link scrollto active" href="/">@localizer["home"]</a></li>
         <li><a class="nav-link scrollto" href="admission">@localizer["admission"]</a></li>
         <li><a class="nav-link scrollto" href="teachers">@localizer["teachers"]</a></li>
         <li><a class="nav-link scrollto" href="contactus">@localizer["contact"]</a></li>
