--- a/Components/Navbar/NavbarComponent.razor
+++ b/Components/Navbar/NavbarComponent.razor
@@ -5,7 +5,8 @@
 <section id="topbar" class="d-flex align-items-center">
   <div class="container d-flex justify-content-center justify-content-md-between">
     <div class="contact-info d-flex align-items-center">
-      <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:nano-djems@mail.ru">nano-djems@mail.ru</a></i>
+      <i class="bi bi-envelope d-flex align-items-center"> <a href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
+</i>
       <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:(+998) 69 210 00 07">(69) 210 00 07</a></i>
     </div>
     <SocialMediaLinksIlmHub></SocialMediaLinksIlmHub>
@@ -15,13 +16,14 @@
   <div class="container d-flex align-items-center justify-content-between">
     @* <h1 class="logo"><a href="index.html">Al-Khorazmiy ISS<span>.</span></a></h1> *@
     <!-- Uncomment below if you prefer to use an image logo -->
-    <a href="/" class="logo"><img src="logo.png" alt=""></a>
+    <a href="#" class="logo"><img src="logo.png" alt=""></a>
     <nav id="navbar" class="navbar" onclick="ActiveStatus()">
       <ul>
         <li><a class="nav-link scrollto active" href="/">@localizer["home"]</a></li>
         <li><a class="nav-link scrollto" href="admission">@localizer["admission"]</a></li>
+        <li><a class="nav-link scrollto" href="https://issfg.netlify.app/">@localizer["About Teachers"]</a></li>
         <li><a class="nav-link scrollto" href="teachers">@localizer["teachers"]</a></li>
-        <li><a class="nav-link scrollto" href="contactus">@localizer["contact"]</a></li>
+        <li><a class="nav-link scrollto" href="contactus">@localizer["contact"]</a></li>  
         <li>
           <LanguageComponent></LanguageComponent>
         </li>
