litsenziya nomeri qoshildi

--- a/Components/Footer/FooterComponent.razor
+++ b/Components/Footer/FooterComponent.razor
@@ -58,7 +58,8 @@
 
     <div class="container pt-3">
         <div class="credits my-auto">
-            @((MarkupString)localizer["DesignedBy"].ToString())
+            <span>license:№029835</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <span>license: №34731</span>
         </div>
     </div>
 </footer><!-- End Footer -->
