--- a/Components/SocialMediaLinks/SocialMediaLinksIlmHub.razor
+++ b/Components/SocialMediaLinks/SocialMediaLinksIlmHub.razor
@@ -1,6 +1,3 @@
-        <li>
-          <LanguageComponent></LanguageComponent>
-        </li>
 <div class="social-links d-none d-md-flex align-items-center">
     <a onclick="window.open('https://t.me/naminteach_group')" class="telegram"><i class="bx bxl-telegram"></i></a>
     <a onclick="window.open('https://www.instagram.com/al_khorazmiy_namangan1/', '_blank')" class="instagram"><i
@@ -9,4 +6,7 @@
             class="bx bxl-youtube"></i></a>
     <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
             class="bx bxl-facebook"></i></a>
+    @* <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
+            class="bx bxl-tiktok"></i></a> *@
+            
 </div>
