--- a/Components/Navbar/NavbarComponent.razor
+++ b/Components/Navbar/NavbarComponent.razor
@@ -5,13 +5,25 @@
 <section id="topbar" class="d-flex align-items-center">
   <div class="container d-flex justify-content-center justify-content-md-between">
     <div class="contact-info d-flex align-items-center">
-      <i class="bi bi-envelope d-flex align-items-center"> <a href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
-</i>
+      <i class="bi bi-envelope d-flex align-items-center"> <a
+          href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
+      </i>
       <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:(+998) 69 210 00 07">(69) 210 00 07</a></i>
-      
     </div>
-    
-    
+<p class="mt-3 d-flex justify-content-end"><LanguageComponent></LanguageComponent></p>
+    <div class="social-links my-3 mt-4">
+      <a onclick="window.open('https://t.me/naminteach_group', '_blank')" class="telegram"><i
+          class="bx bxl-telegram"></i></a>
+      <a onclick="window.open('https://www.instagram.com/al_khorazmiy_namangan1/', '_blank')" class="instagram"><i
+          class="bx bxl-instagram"></i></a>
+      <a onclick="window.open('https://youtu.be/0En36L0KnS8', '_blank')" class="youtube"><i
+          class="bx bxl-youtube"></i></a>
+      <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
+          class="bx bxl-facebook"></i></a>
+      @* <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')"
+        class="facebook"><i
+        class="bx bxl-tiktok"></i></a> *@
+    </div>
   </div>
 </section>
 <header id="header" class="d-flex align-items-center">
