--- a/Components/Footer/FooterComponent.razor
+++ b/Components/Footer/FooterComponent.razor
@@ -39,11 +39,10 @@
                         @localizer["address-building"],<br>
                         @localizer["address-region"]<br>
                         @localizer["province"]<br>
-                        <strong>@localizer["email"]:</strong> <a href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
+                        <strong>@localizer["email"]:</strong> <a href="mailto:alkhorazmiynamangan@gmail.com">alkhorazmiynamangan@gmail.com</a>
 <br>
-                        <strong>@localizer["phone"]:</strong><a href="tel:+998692100007">&nbsp;(69) 210 00 07</a>
-                        <span class="tab"><a href="tel:+998905985888">(90) 598 58 88</a></span>
-                        <span class="tab"><a href="tel:+99843000005">(94) 300 00 05</a></span>
+                        <strong>@localizer["phone"]:</strong><a href="tel:+998692100007">&nbsp;+998(69) 210 00 07</a>
+                        <span class="tab"><a href="tel:+998995215005">+998(99) 521 50 05</a></span>
                     </p>
                 </div>
                 <style type="text/css">
