--- a/Components/Hero/HeroeComponent.razor
+++ b/Components/Hero/HeroeComponent.razor
@@ -8,7 +8,7 @@
         <div class="d-flex">
             <a href="javascript:function() { return false; }" @onclick="GoToContactUs"
                 class="btn-get-started scrollto">@localizer["heroebutton"]</a>
-            <a href="https://youtu.be/0En36L0KnS8 '_blank'" class="glightbox btn-watch-video"><i
+            <a href="https://www.youtube.com/watch?v=sqTJJFZc6c4 '_blank'" class="glightbox btn-watch-video"><i
                     class="bi bi-play-circle"></i><span>@localizer["heroevideo"]</span></a>
         </div>
     </div>
