--- a/Components/Navbar/NavbarComponent.razor
+++ b/Components/Navbar/NavbarComponent.razor
@@ -6,11 +6,11 @@
   <div class="container d-flex justify-content-center justify-content-md-between">
     <div class="contact-info d-flex align-items-center">
       <i class="bi bi-envelope d-flex align-items-center"> <a
-          href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
+          href="mailto:alkhorazmiynamangan@gmail.com">alkhorazmiynamangan@gmail.com</a>
       </i>
-      <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:(+998) 69 210 00 07">(69) 210 00 07</a></i>
+      <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:+998692100007">+998(69) 210 00 07</a></i>
     </div>
-<p class="mt-3 d-flex justify-content-end"><LanguageComponent></LanguageComponent></p>
+@* <p class="mt-3 d-flex justify-content-end"><LanguageComponent></LanguageComponent></p> *@
     <div class="social-links my-3 mt-4">
       <a onclick="window.open('https://t.me/naminteach_group', '_blank')" class="telegram"><i
           class="bx bxl-telegram"></i></a>
