--- a/Components/Footer/FooterComponent.razor
+++ b/Components/Footer/FooterComponent.razor
@@ -12,7 +12,7 @@
                                 class="bx bxl-telegram"></i></a>
                         <a onclick="window.open('https://www.instagram.com/al_khorazmiy_namangan1/', '_blank')" class="instagram"><i
                                 class="bx bxl-instagram"></i></a>
-                        <a onclick="window.open('https://youtu.be/0En36L0KnS8', '_blank')"
+                        <a onclick="window.open('https://www.youtube.com/channel/UC7odNDSiBMmcQWvpA1oye3Q', '_blank')"
                             class="youtube"><i class="bx bxl-youtube"></i></a>
                         <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
                                 class="bx bxl-facebook"></i></a>
