--- a/Components/Navbar/NavbarComponent.razor
+++ b/Components/Navbar/NavbarComponent.razor
@@ -16,7 +16,7 @@
           class="bx bxl-telegram"></i></a>
       <a onclick="window.open('https://www.instagram.com/al_khorazmiy_namangan1/', '_blank')" class="instagram"><i
           class="bx bxl-instagram"></i></a>
-      <a onclick="window.open('https://youtu.be/0En36L0KnS8', '_blank')" class="youtube"><i
+      <a onclick="window.open('https://www.youtube.com/channel/UC7odNDSiBMmcQWvpA1oye3Q', '_blank')" class="youtube"><i
           class="bx bxl-youtube"></i></a>
       <a onclick="window.open('https://www.facebook.com/profile.php?id=100081095244808', '_blank')" class="facebook"><i
           class="bx bxl-facebook"></i></a>
@@ -34,7 +34,7 @@
     <nav id="navbar" class="navbar" onclick="ActiveStatus()">
       <ul>
         <li><a class="nav-link scrollto active" href="/">@localizer["home"]</a></li>
-        <li><a class="nav-link scrollto" href="https://issfg.netlify.app/">@localizer["About Teachers"]</a></li>
+        @* <li><a class="nav-link scrollto" href="https://issfg.netlify.app/">@localizer["About Teachers"]</a></li> *@
         <li><a class="nav-link scrollto" href="admission">@localizer["admission"]</a></li>
         <li><a class="nav-link scrollto" href="teachers">@localizer["teachers"]</a></li>
         <li><a class="nav-link scrollto" href="contactus">@localizer["contact"]</a></li>
