--- a/Components/Footer/FooterComponent.razor
+++ b/Components/Footer/FooterComponent.razor
@@ -42,7 +42,7 @@
                         <strong>@localizer["email"]:</strong> <a href="mailto:alkhorazmiynamangan@gmail.com">alkhorazmiynamangan@gmail.com</a>
 <br>
                         <strong>@localizer["phone"]:</strong><a href="tel:+998692100007">&nbsp;+998(69) 210 00 07</a>
-                        <span class="tab"><a href="tel:+998995215005">+998(99) 521 50 05</a></span>
+                        <!-- <span class="tab"><a href="tel:+998995215005">+998(99) 521 50 05</a></span> -->
                     </p>
                 </div>
                 <style type="text/css">
