--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -610,14 +610,14 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #222222;
+  color: #ffffff;
   font-family: "Poppins", sans-serif;
 }
 #hero h1 span {
-  color: #106eea;
+  color: #ffffff;
 }
 #hero h2 {
-  color: #555555;
+  color: #000000;
   margin: 5px 0 30px 0;
   font-size: 24px;
   font-weight: 400;
@@ -642,7 +642,7 @@ h6 {
   font-size: 16px;
   transition: 0.5s;
   margin-left: 25px;
-  color: #222222;
+  color: #ffffff;
   font-weight: 600;
   display: flex;
   align-items: center;
