--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -718,14 +718,14 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #222222;
+  color: #ffffff;
   font-family: "Poppins", sans-serif;
 }
 #ahero h1 span {
-  color: #106eea;
+  color: #ffffff;
 }
 #ahero h2 {
-  color: #555555;
+  color: #000000;
   margin: 5px 0 30px 0;
   font-size: 24px;
   font-weight: 400;
