--- a/Components/Admission/AdmissionFaturedComponent.razor
+++ b/Components/Admission/AdmissionFaturedComponent.razor
@@ -56,13 +56,13 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                     <div class="icon"><i class="bi bi-gender-female"></i></div>
                     <h4 class="title"><a href="">@localizer["Girls"]</a></h4>
                     <p class="description">@localizer["GirlsInfo"]</p>
                 </div>
-            </div>
+            </div> -->
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
@@ -71,26 +71,34 @@
                     <p class="description">@localizer["TeacherInfo"]</p>
                 </div>
             </div>
-        </div>
 
-        <br>
-
-        <div class="row">
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-                    <div class="icon"><i class="bi bi-wifi"></i></div>
-                    <h4 class="title"><a href="">@localizer["Online"]</a></h4>
-                    <p class="description">@localizer["OnlineInfo"]</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                     <div class="icon"><i class="bi bi-eyeglasses"></i></div>
                     <h4 class="title"><a href="">@localizer["Parents"]</a></h4>
                     <p class="description">@localizer["ParentsInfo"]</p>
                 </div>
             </div>
+        </div>
+
+        <br>
+
+        <div class="row -flex justify-content-center">
+            <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                    <div class="icon"><i class="bi bi-wifi"></i></div>
+                    <h4 class="title"><a href="">@localizer["Online"]</a></h4>
+                    <p class="description">@localizer["OnlineInfo"]</p>
+                </div>
+            </div> -->
+
+            <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+                    <div class="icon"><i class="bi bi-eyeglasses"></i></div>
+                    <h4 class="title"><a href="">@localizer["Parents"]</a></h4>
+                    <p class="description">@localizer["ParentsInfo"]</p>
+                </div>
+            </div> -->
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
