--- a/Components/ContactUs/ContactUsComponent.razor
+++ b/Components/ContactUs/ContactUsComponent.razor
@@ -14,7 +14,7 @@
         <div class="info-box  mb-4">
             <i class="bx bx-envelope"></i>
             <h3>@localizer["Email"]</h3>
-            <a href="mailto:alkhorazmiynamangan@gmail.com">Al-KHorazmiy@gmail.com</a>
+            <a href="mailto:alkhorazmiynamangan@gmail.com">alkhorazmiynamangan@gmail.com</a>
         </div>
     </div>
 
