--- a/Components/Admission/AdmissionFormComponent.razor
+++ b/Components/Admission/AdmissionFormComponent.razor
@@ -90,7 +90,8 @@
           <div class="form-group">
             <textarea class="form-control" name="message" rows="5" placeholder='@localizer["habar"]'></textarea>
           </div>
-          <div class="text-center"><button onclick="Send_Admission_Data()"
+                    <div class="text-center">
+                        <button onclick="Send_Admission_Data()"
               type="submit" id="adbtn">@localizer["application"]</button></div>
           <div id="res_success" hidden class="alert alert-success mt-3 h4">@localizer["Success"]</div>
           <div id="res_error" hidden class="alert alert-danger h4">@localizer["Error"]</div>
