Changes On other Sheets

--- a/Components/Teachers/TeachersFormComponent.razor
+++ b/Components/Teachers/TeachersFormComponent.razor
@@ -38,7 +38,7 @@
                         <input class="form-control" type="file" id="uploadfile"  accept="application/pdf,
                             application/vnd.openxmlformats-officedocument.wordprocessingml.document"/>
                         <input type="hidden" id="myResume" name="myResume"
-                            value="https://drive.google.com/drive/folders/1YCG6IWrp22dtBPZNQeaVJcKL8WG-Q983?usp=sharing">
+                               value="https://drive.google.com/drive/folders/1OIoowcLR3Rsi1q76FcjcwhCCbxlXVF7H?usp=sharing">
                     </div>
                     <select class="form-select" name="EnglishLevel" aria-label="Default select example">
                         <option value="">@localizer["englishlevel"]</option>
@@ -55,7 +55,7 @@
                             required></textarea>
                     </div>
                     <div class="text-center"><button type="submit" id="teachbtn"
-                            onclick="Send_Team_Data()">@localizer["send"]</button>
+                            onclick="Send_Teachers_Data()">@localizer["send"]</button>
                     </div>
                     <div id="res_suc" hidden class="alert alert-success mt-3 h4">@localizer["Success"]</div>
                     <div id="res_err" hidden class="alert alert-danger h4">@localizer["Error"]</div>
