--- a/Components/ContactUs/ContactUsComponent.razor
+++ b/Components/ContactUs/ContactUsComponent.razor
@@ -22,7 +22,7 @@
         <div class="info-box  mb-4">
             <i class="bx bx-phone-call"></i>
             <h3>@localizer["Phone"]</h3>
-            <p><span><a href="tel: +998692100007">+998(69) 210 00 07</a></span> &nbsp;&nbsp;&nbsp;<!-- <span><a href="tel: +998943030707">(94) 303 07 07</a></span>--></p>
+            <p><span><a href="tel: +998692100007">+998(69) 210 00 07</a></span> &nbsp;&nbsp;&nbsp;</p>
             
         </div>
         
@@ -44,8 +44,8 @@
                         placeholder='@localizer["Name"]' required>
                 </div>
                 <div class="col form-group">
-                    <input type="email" oninput="ValidationIcon('email')" class="form-control" name="email" id="email"
-                        placeholder='@localizer["YourEmail"]' required>
+                    <input type="tel" class="form-control" value="+998" name="phone_number" id="phone"
+                           oninput="ValidationIcon('phone')" placeholder='@localizer["number1"]' required>
                 </div>
             </div>
             <div class="form-group">
@@ -55,7 +55,7 @@
                 <textarea class="form-control" name="message" rows="5" placeholder='@localizer["Message"]'></textarea>
             </div>
 
-            <div class="text-center"><button onclick="Send_Data()" id="compobtn"
+            <div class="text-center"><button onclick="Send_Contacts_Data()" id="compobtn"
                     type="submit">@localizer["Sent"]</button></div>
             <div id="res_suc" hidden class="alert alert-success mt-3 h4">@localizer["Success"]</div>
             <div id="res_err" hidden class="alert alert-danger h4">@localizer["Error"]</div>
