Teachers Form Fixed

--- a/Components/Teachers/TeachersFormComponent.razor
+++ b/Components/Teachers/TeachersFormComponent.razor
@@ -56,7 +56,9 @@
                             required></textarea>
                     </div>
                     <div class="text-center"><button type="submit" id="teachbtn"
-                            onclick="Send_Teachers_Data()">@localizer["send"]</button>
+                                onclick="Send_Teachers_Data()">
+                            @localizer["send"]
+                        </button>
                     </div>
                     <div id="res_suc" hidden class="alert alert-success mt-3 h4">@localizer["Success"]</div>
                     <div id="res_err" hidden class="alert alert-danger h4">@localizer["Error"]</div>
