--- a/Pages/Teachers.razor
+++ b/Pages/Teachers.razor
@@ -3,4 +3,5 @@
 <PageTitle>Teachers</PageTitle>
 <TeachersComponent></TeachersComponent>
 <TeachersAnnounce></TeachersAnnounce>
+@*<TeachersInUs></TeachersInUs>*@
 <TeachersFormComponent></TeachersFormComponent>
